--- a/test.html
+++ b/test.html
@@ -15,26 +15,37 @@
         <header>
             <!-- Fixed navbar -->
             <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                <a class="navbar-brand" href="#">Fixed navbar</a>
+                <a class="navbar-brand" href="#">Ask-Timonin</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <form class="form-inline mt-2 mt-md-0">
+                        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" style="width: 350px;">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                            <a class="ask link" href="" style="color: green; padding-left: 20px;">Ask</a>
                         </li>
                     </ul>
                     <form class="form-inline mt-2 mt-md-0">
-                        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        <img class = "question-img" src = "img/test.jpg" width = 50px height = 50px >
+
+                        <div class="col">
+                            <div class="col question-tags">
+                                <div style="color: white;">
+                                    <h5 class ="col user-name-bar">
+                                        Username
+                                    </h5>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <a class="question-tags" href = "">Settings</a> <a class="question-tags" href = "">Log out</a>
+                            </div>
+                        </div>
                     </form>
+
                 </div>
             </nav>
         </header>
@@ -46,7 +57,7 @@
                         <h2>New questions</h2>
                     </div>
                     <div class = "type-pages">
-                        <h4><a class = "underlined" href = "" >New questions</a></h4>
+                        <h3><a class = "underlined" href = "" >Hot questions</a></h3>
                     </div>
                 </div>
                 <div class="row">
