--- a/page4.html
+++ b/page4.html
@@ -52,10 +52,10 @@
          <div class="container">
             <div class = "row">
                <div class = "type-pages">
-                  <h2>New questions</h2>
+                  <h2>Tag: bender</h2>
                </div>
                <div class = "type-pages">
-                  <h3><a class = "underlined" href = "" >Hot questions</a></h3>
+                  <h3><a class = "underlined" href = "" ></a></h3>
                </div>
             </div>
             <div class="row">
@@ -65,10 +65,12 @@
                      <! –– For Image ––>
                      <div class="col-3">
                         <img class = "question-img" src = "img/test.jpg" width = 100px height = 100px >
-                        <div class="col-1 rating-counter">
-                           <div class="rating-title">5</div>
-                           <button class = "btn-rating" id="plus-rating" name="plus"><br><br></button>
-                           <button class = "btn-rating" id="minus-rating" name="minus"><br><br></button>
+                        <div class="row-1 rating-counter">
+                           <div class="col rating-title">5</div>
+                           <div class="col">
+                              <button class = "btn-rating" id="plus-rating" name="plus"><br><br></button>
+                              <button class = "btn-rating" id="minus-rating" name="minus"><br><br></button>
+                           </div>
                         </div>
                      </div>
                      <! –– For title and text ––>
@@ -78,16 +80,11 @@
                            Lorem ipsum dolor sit amet,
                            consectetur adipiscing elit, sed do eiusmod tempor
                            incididunt ut labore et dolore magna aliqua. Ut enim
-                           ad minim veniam, quis nostrud exercitation ullamco
-                           laboris nisi ut aliquip ex ea commodo consequat. Duis
-                           aute irure dolor in reprehenderit in voluptate velit esse
-                           cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                           occaecat cupidatat non proident, sunt in culpa qui officia
-                           deserunt mollit anim id est laborum
+                           ad minim veniam, quis nostrud exercitation...
                         </div>
                         <div class="row under-question">
                            <div class = "question-answers">
-                              <a class = "underlined" href = "">Ответы (0)</a>
+                              <a class = "underlined" href = "">Ответы (2)</a>
                            </div>
                            <div class="question-tags">
                               Теги:
@@ -99,14 +96,17 @@
                         </div>
                      </div>
                   </div>
+                  <! –– Question Box ––>
                   <div class="row question-box">
                      <! –– For Image ––>
                      <div class="col-3">
                         <img class = "question-img" src = "img/test.jpg" width = 100px height = 100px >
-                        <div class="col-1 rating-counter">
-                           <div class="rating-title">5</div>
-                           <button class = "btn-rating" id="plus-rating" name="plus"><br><br></button>
-                           <button class = "btn-rating" id="minus-rating" name="minus"><br><br></button>
+                        <div class="row-1 rating-counter">
+                           <div class="col rating-title">5</div>
+                           <div class="col">
+                              <button class = "btn-rating" id="plus-rating" name="plus"><br><br></button>
+                              <button class = "btn-rating" id="minus-rating" name="minus"><br><br></button>
+                           </div>
                         </div>
                      </div>
                      <! –– For title and text ––>
@@ -116,16 +116,11 @@
                            Lorem ipsum dolor sit amet,
                            consectetur adipiscing elit, sed do eiusmod tempor
                            incididunt ut labore et dolore magna aliqua. Ut enim
-                           ad minim veniam, quis nostrud exercitation ullamco
-                           laboris nisi ut aliquip ex ea commodo consequat. Duis
-                           aute irure dolor in reprehenderit in voluptate velit esse
-                           cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                           occaecat cupidatat non proident, sunt in culpa qui officia
-                           deserunt mollit anim id est laborum
+                           ad minim veniam, quis nostrud exercitation...
                         </div>
                         <div class="row under-question">
                            <div class = "question-answers">
-                              <a class = "underlined" href = "">Ответы (0)</a>
+                              <a class = "underlined" href = "">Ответы (2)</a>
                            </div>
                            <div class="question-tags">
                               Теги:
@@ -137,14 +132,17 @@
                         </div>
                      </div>
                   </div>
+                  <! –– Question Box ––>
                   <div class="row question-box">
                      <! –– For Image ––>
                      <div class="col-3">
                         <img class = "question-img" src = "img/test.jpg" width = 100px height = 100px >
-                        <div class="col-1 rating-counter">
-                           <div class="rating-title">5</div>
-                           <button class = "btn-rating" id="plus-rating" name="plus"><br><br></button>
-                           <button class = "btn-rating" id="minus-rating" name="minus"><br><br></button>
+                        <div class="row-1 rating-counter">
+                           <div class="col rating-title">5</div>
+                           <div class="col">
+                              <button class = "btn-rating" id="plus-rating" name="plus"><br><br></button>
+                              <button class = "btn-rating" id="minus-rating" name="minus"><br><br></button>
+                           </div>
                         </div>
                      </div>
                      <! –– For title and text ––>
@@ -154,16 +152,11 @@
                            Lorem ipsum dolor sit amet,
                            consectetur adipiscing elit, sed do eiusmod tempor
                            incididunt ut labore et dolore magna aliqua. Ut enim
-                           ad minim veniam, quis nostrud exercitation ullamco
-                           laboris nisi ut aliquip ex ea commodo consequat. Duis
-                           aute irure dolor in reprehenderit in voluptate velit esse
-                           cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                           occaecat cupidatat non proident, sunt in culpa qui officia
-                           deserunt mollit anim id est laborum
+                           ad minim veniam, quis nostrud exercitation...
                         </div>
                         <div class="row under-question">
                            <div class = "question-answers">
-                              <a class = "underlined" href = "">Ответы (0)</a>
+                              <a class = "underlined" href = "">Ответы (2)</a>
                            </div>
                            <div class="question-tags">
                               Теги:
